style: 💄 优化展示相关,新增关键词

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@squirreljs/squirrel-vite-plugin-filemanager",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "🐿️ Squirrel Vite Plugin File Manager is a Vite plugin for packaging multiple folders into individual zip files, simplifying deployment and organization. Enhance your Vite projects with this handy tool!",
   "repository": {
     "type": "git",
@@ -28,6 +28,10 @@
   "files": [
     "dist"
   ],
+  "keywords": ["Vite", "Plugin", "File", "Manager", "Zip", "Deploy", "Folder", "Package", "Compress", "Archive", "Squirrel"],
+  "engines": {
+    "node": "^14.18.0 || >=16.0.0"
+  },
   "scripts": {
     "clean": "rimraf dist",
     "dev": "tsc -b -w",
